@@ -32,7 +32,8 @@ public:
   LPAC97MEDIAOBJECT           GetAc97Device() { return m_pAC97Device; }
   
   void                        SetupSpeakerConfig(int iChannels, bool& bAudioOnAllSpeakers, bool bIsMusic=true);
-  bool                        IsAC3EncoderActive();
+  bool                        IsAC3EncoderActive() const;
+  bool                        IsPassthroughActive() const;
 
   bool                        GetMixBin(DSMIXBINVOLUMEPAIR* dsmbvp, int* MixBinCount, DWORD* dwChannelMask, int Type, int Channels);
 
